; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_1092.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_1092.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"%s[-] %s Usage:\0A\00", align 1
@YE = common dso_local global i8* null, align 8
@NO = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [45 x i8] c"%s[-] %s\09 -h \09\09IP address to bind socket to\0A\00", align 1
@.str.2 = private unnamed_addr constant [49 x i8] c"%s[-] %s\09 -p \09\09port number to attempt hijack of\0A\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"%s[-] %s\09 -v \09\09Prints this help\0A\00", align 1
@.str.4 = private unnamed_addr constant [35 x i8] c"%s[-] %s%s -h 10.1.1.215 -p 1241\0A\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = load i32, i32* @stderr, align 4
  %6 = load i8*, i8** @YE, align 8
  %7 = load i8*, i8** @NO, align 8
  %8 = call i32 (i32, i8*, i8*, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %6, i8* %7)
  %9 = load i32, i32* @stderr, align 4
  %10 = load i8*, i8** @YE, align 8
  %11 = load i8*, i8** @NO, align 8
  %12 = call i32 (i32, i8*, i8*, i8*, ...) @fprintf(i32 %9, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i8* %10, i8* %11)
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8*, i8** @YE, align 8
  %15 = load i8*, i8** @NO, align 8
  %16 = call i32 (i32, i8*, i8*, i8*, ...) @fprintf(i32 %13, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.2, i64 0, i64 0), i8* %14, i8* %15)
  %17 = load i32, i32* @stderr, align 4
  %18 = load i8*, i8** @YE, align 8
  %19 = load i8*, i8** @NO, align 8
  %20 = call i32 (i32, i8*, i8*, i8*, ...) @fprintf(i32 %17, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0), i8* %18, i8* %19)
  %21 = load i32, i32* @stderr, align 4
  %22 = load i8*, i8** @YE, align 8
  %23 = load i8*, i8** @NO, align 8
  %24 = load i8**, i8*** %4, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 0
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 (i32, i8*, i8*, i8*, ...) @fprintf(i32 %21, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.4, i64 0, i64 0), i8* %22, i8* %23, i8* %26)
  %28 = load i32, i32* @EXIT_FAILURE, align 4
  %29 = call i32 @_exit(i32 %28) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
